Initial support for execing external processes via the run button - to enable (for example) the writing of libGDX games that come up in a separate window (and process).